- Begin work on the message view template - Fixed issue with deleting messages on mobile

--- a/scss/messages/table.scss
+++ b/scss/messages/table.scss
@@ -1,6 +1,6 @@
 div {
     &.contact_messages_table_container {
-        @apply flex flex-col shadow-md container mt-6 sm:mt-4;
+        @apply flex flex-col shadow-md container sm:mt-4 mt-6;
 
         div {
             &.contact_messages_table_tools {
